--- a/Where2Walk/app/build.gradle
+++ b/Where2Walk/app/build.gradle
@@ -22,6 +22,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.google.android.gms:play-services-maps:11.8.0'
     compile 'com.android.support:design:26.1.0'
 
     // Dependency for Google Sign-In
